<resources>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sin
    <string name="empty_presets_list">There are no saved presets yet.\nClick add to create one.</string>
    <string name="save">Save</string>
    <string name="set_name">Set name</string>
    <string name="unsaved_save">(*) Save</string>
    <string name="generate">Generate</string>
    <string name="failed_fetch_presets">Failed to fetch presets</string>
    <string name="failed_delete_preset">Failed to delete preset</string>
    <string name="confirm_action">Confirm action</string>
    <string name="are_you_sure_delete_s_preset">Are you sure you want to delete \"%s\" preset?</string>
    <string name="are_you_sure_generate_preset_s">Are you sure you want to start generation from \"%s\" preset?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait</string>
    <string name="generation_results">Generation results</string>
    <string name="generation_error">An unknown error occurred during generation</string>
    <string name="generating_image">Generating image…</string>
    <string name="generating_image_s_from_s">Generating %1$s from %2$s…</string>
    <string name="generated_stats">Successfully generated - %1$s\nFailed to generate - %2$s</string>
    <string name="generator">Generator</string>
    <string name="n_choose_generator">1. Choose generator:</string>
    <string name="effect">Effect</string>
    <string name="color">Color</string>
    <string name="n_choose_color">4. Choose color:</string>
    <string name="n_choose_effect">2. Choose effect:</string>
    <string name="size_count">Size/count</string>
    <string name="n_choose_size_count">3. Choose size/count:</string>
    <string name="quality">Quality</string>
    <string name="n_choose_quality">5. Choose quality:</string>
    <string name="summary">Summary</string>
    <string name="n_summary">6. Summary:</string>
    <string name="configure">Configure</string>
    <string name="new_preset">New preset</string>
    <string name="preset_edit">Edit preset</string>
    <string name="generator_random">RANDOM</string>
    <string name="generator_flat_color">FLAT COLOR</string>
...
