...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- LinearLayout is used here because of vector drawable -->
    <LinearLayout
        android:id="@+id/home_activity_empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="48dp"
        android:visibility="gone"
...
            android:gravity="center"
            android:text="@string/empty_presets_list" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/home_activity_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/home_activity_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add" />
...
