<?xml version="1.0" encoding="utf-8"?>
<com.stepstone.stepper.StepperLayout android:id="@+id/generation_steps_activity_stepper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:ms_backButtonColor="?android:attr/textColorSecondary"
    app:ms_nextButtonColor="?android:attr/textColorSecondary"
    app:ms_stepperType="dots" />