<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    style="@style/CommonDialogPadded"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_preset_name_dialog_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:maxLength="@integer/max_preset_name_length" />

</FrameLayout>